[package]
name = "octo-potato"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
humantime = "2.2.0"
reqwest = { version = "0.12.23", features = ["blocking","multipart","json"] }
serde_json = "1.0.142"
rand = "0.9.2"
rayon = "1.11.0"
crossbeam-channel = "0.5"
